Further experiment with lighting/material look
- Create a default actor material with no reflections.
- Create a white .hdr for SkyLight Cubemap.
- Create a debug .png as a placeholder asset.
- Changed Project Settings Anti-Aliasing.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -42,7 +42,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
@@ -52,9 +52,14 @@ r.DefaultFeature.Bloom=False
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=False
 r.DefaultFeature.AutoExposure=False
-r.AntiAliasingMethod=0
-r.MSAACount=1
+r.AntiAliasingMethod=4
+r.MSAACount=8
 r.DefaultFeature.MotionBlur=False
+r.AllowOcclusionQueries=True
+Compat.UseDXT5NormalMaps=False
+r.CustomDepth=1
+r.DefaultFeature.AutoExposure.Method=2
+r.DefaultFeature.AutoExposure.Bias=1.000000
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
